--- a/Thesis/content/6_experiementresults.tex
+++ b/Thesis/content/6_experiementresults.tex
@@ -5,7 +5,7 @@
 \section{Anomaly detection performance}
 \label{sec:performance}
 
-With parameters learned from \Fref{sec:parametertuning}, autoencoders are trained for each dataset with the beginning of streaming data. The anomaly detection performance is described by AUC. For each dataset, we compare the AUC of online phase that without and with continuously model and parameter updating (\Fref{tab:performance}). The Power demand set retrain trigger depends on the batch performance, and for the rest datasets, retraining only triggered when retrain buffers are full. The retraining brings overall performance improvement on all datasets comparing to stationary models. Especially in the SMTP+HTTP dataset, the stationary without learning concept drifted knowledge performs clearly worth than the model with updating.
+With parameters learned from \Fref{sec:parametertuning}, autoencoders are trained for each dataset with the beginning of streaming data. The anomaly detection performance is indicated by AUC. For each dataset, we compare the AUC of online phase that without and with continuously model and parameter updating (\Fref{tab:performance}). For the PowerDemand dataset, retrain trigger depends on the batch performance. And for the rest datasets, retraining only triggered when retrain buffers are full. The retraining brings overall performance improvement on all datasets comparing to stationary models. Especially in the SMTP+HTTP dataset, the stationary without learning concept drifted knowledge performs clearly worth than the model with updating.
 
 \begin{table}[h] 
 \caption{Performance} 
@@ -14,7 +14,7 @@ With parameters learned from \Fref{sec:parametertuning}, autoencoders are traine
 \hline  
 Dataset & AUC(without retraining) & AUC(with retraining) & \#retrain \\ 
 \hline 
-PowerDemand & 0.91 & 0.97 & 1  \\  
+PowerDemand & 0.91 & 0.97 & 2  \\  
 \hline 
 SMTP & 0.94 &  0.98 &  2 \\ 
 \hline 
@@ -27,7 +27,7 @@ ForestCover &0.67&0.74 & 3\\
 \end{tabular}
 \label{tab:performance}  
 \end{table} 
-In order to compare the performance with and without retraining, and after each retraining, another example is to calculate the AUC value for each specified time period. As Shown in \Fref{fig:auc_retrain}, the x-axis is the periods before first retraining(shown as P1 in each subplot), between first and second retraining, and so on. For each dataset, we compare the AUC value of stationary model (trained with only initialization set) and adaptive model (online updated). For most cases, the adaptive models outperform stationary models, which shows the models profits from the knowledge updating over streaming data. To be notice that the SMTP+HTTP set contains sudden concept drift around P3, which leads to a sharp decline of the stationary model. In the meantime, the adaptive model is slightly influenced by the mixed knowledge at P3 but keeps outstanding performance when the stream turned to HTTP side.\\
+In order to compare the performance with and without retraining, and after each retraining, another example is to calculate the AUC value for each specified time period. As Shown in \Fref{fig:auc_retrain}, the x-axis is the periods before first retraining(shown as P1 in each subplot), between first and second retraining, and so on. For each dataset, we compare the AUC value of stationary model (trained with only initialization set) and adaptive model (online updated). For most cases, the adaptive models outperform stationary models, which shows the models profits from the knowledge updating over streaming data. To be notice that the SMTP+HTTP set contains sudden concept drift around P3, which leads to a sharp decline of the stationary model. In the meantime, the adaptive model is slightly influenced by the mixed knowledge at P3 but keeps outstanding performance when the stream switched to HTTP side.\\
 \begin{figure}[h]
 \centering
 \includegraphics[width=15cm, height=15cm]{auc_retrain}
@@ -35,7 +35,7 @@ In order to compare the performance with and without retraining, and after each 
 \label{fig:auc_retrain}
 \end{figure}
 
-\Fref{fig:runtime} shows the run time used for both stationary models and adaptive models for each data set. The retraining takes more time for retraining in HTTP, SMTP+HTTP and FORESR are due to that larger datasets take more time for prediction, and can trigger more retraining process, and for each retraining, the retrain buffers also contains larger retraining sets.
+\Fref{fig:runtime} shows the run time used for both stationary models and adaptive models for each data set. The updating takes more time for HTTP, SMTP+HTTP and FORESR than PowerDemand and SMTP is due to that larger datasets take more time for prediction, and trigger more updating events. And for each retraining, the retrain buffers also contains larger retraining sets.
 
 
 
@@ -50,12 +50,12 @@ In order to compare the performance with and without retraining, and after each 
 \section{Synthetic example}
 \label{sec:synthetic}
 
-In order to show the benefit of model retraining along the stream, we demonstrate the online learning process of the small set Power demand in this section. The power demand dataset does not contain clear incremental or sudden concept drift, but the normal pattern still different slightly to each other. Lack of overall impression during the model initialization phase can lead to failures in the online phase. 
+In order to show the benefit of model retraining along the stream, we demonstrate the online learning process of the small set Power demand in this section. The PowerDemand dataset does not contain clear incremental or sudden concept drift, but the normal pattern still different slightly to each other. Lack of overall impression during the model initialization phase can lead to failures during the online phase. 
 
 \subsection{Reaction of concept drift}
 \label{sec:reaction}
 
-\Fref{fig:power_retraining} shows 3 continual days power demand in normal state. Due to the lack knowledge of current pattern, the autoencoder reconstructs the input time series high than desired on day 1(left diagram). This could be caused by seasonal changes on the power demand, which is slightly, gradually, and not able to cause misclassify directly. However, the increase of normal data reconstruction error makes the margin between two classification classes smaller, and harder to make decision. As a consequence, the model retraining process is triggered after the second day with last seen data in the retrain buffer, and the model performs well again on the third day.
+\Fref{fig:power_retraining} shows 3 continual days power demand in normal state. Due to the lack of knowledge for current pattern, the autoencoder reconstructs the input time series higher than desired on day 1 (left diagram). This could be caused by seasonal changes on the power demand, which is slightly, gradually, and not able to cause misclassify directly. However, the increase of normal data reconstruction error makes the margin between two classification classes smaller, and harder to make decision. As a consequence, the model retraining process is triggered after the second day with last seen data in the retrain buffer, and the model performs well again on the third day.
 
 \begin{figure}[h]
 \centering
@@ -76,7 +76,7 @@ During the online phase, the model is retrained two times, before batch No.10 an
 \label{fig:power_online}
 \end{figure}
 
-After each retraining process, the parameters mu, sigma and threshold of anomaly scores are also updated. \Fref{fig:parachanges} shows the parameter changes over the stream. As there is no clear concept drift during the power demand stream, the parameters changes just slightly, and learn latest knowledge from the retrain buffer. 
+After each retraining process, the parameters mu, sigma and threshold of anomaly scores are also updated. \Fref{fig:parachanges} shows the parameter changes over the stream. As there is no clear concept drift during the power demand stream, the parameters change just slightly in oder to learn latest knowledge from the retrain buffer. 
 
 \begin{figure}[h]
 \centering
@@ -85,9 +85,6 @@ After each retraining process, the parameters mu, sigma and threshold of anomaly
 \label{fig:parachanges}
 \end{figure}
 
-During the online phase, each normal window that is not given with a low enough anomaly score is appended to the retaining buffer to accumulate the retaining set. In order to find out what kind of data is used for retaining and how much retraining data is enough for model updating, we experiment with different retraining buffer size on the power demand stream.
-
-
 
 
 \section{Model retraining}
@@ -95,7 +92,7 @@ During the online phase, each normal window that is not given with a low enough 
 
 \subsection{Reaction of sudden and drastic concept drift}
 \label{sec:reaction}
-The main advantage of online model is its ability to take reaction against sudden data distributional changes in time. The SMTP+HTTP data set is composed by directly connect HTTP set after SMTP, so there is a sudden concept drift in between. The model is initialized with only SMTP data, so HTTP is completely unknown knowledge for the model. \Fref{fig:smtp+http} is a box plot of anomaly scores of normal instances from different part of the stream. The block B1 is  statistic of normal instances’ anomaly scores between the last model updating on the SMTP side and the concept drift happening, which is relative lower due to the good grasp of SMTP data. Once the concept drift takes place, namely, HTTP data arrives with the stream, more normal instances with higher anomaly score appears in B2. Although a retraining process is triggered soon after the concept drift, the normal instances’ anomaly scores still increase due to lack of HTTP instance. Gradually, with the increasing amount seen HTTP data, the model gives normal data lower anomaly score again during B4 to B6. As a result, we can observe that, when a sudden concept drift happened in the stream, our model needs only 3 to 4 times retraining with totally 3500 instances for retraining to master the new data distribution again.
+The main advantage of online model is its ability to take reaction against sudden data distributional changes in time. The SMTP+HTTP data set is composed by directly connect HTTP set after SMTP, so there is a sudden concept drift in between. The model is initialized with only SMTP data, so HTTP is completely unknown knowledge for the model. \Fref{fig:smtp+http} is a box plot of anomaly scores of normal instances from different part of the stream. The block B1 is a statistic of normal instances’ anomaly scores between the last model updating on the SMTP side and the concept drift happening, which is relative lower due to the good grasp of SMTP data. Once the concept drift takes place, namely, HTTP data arrives along with the stream, more normal instances with higher anomaly score appears in B2. Although a retraining process is triggered soon after the concept drift, the normal instances’ anomaly scores still increase due to lack of HTTP instance. Gradually, with the increasing amount seen HTTP data, the model gives normal data lower anomaly score again during B4 to B6. As a result, we can observe that, when a sudden concept drift happened in the stream, our model needs only 3 to 4 times retraining with totally 3500 instances for retraining to master the new data distribution again.
 
 \begin{figure}[h]
 \centering
@@ -107,11 +104,11 @@ The main advantage of online model is its ability to take reaction against sudde
 \subsection{Reaction of serried and slight concept drift}
 \label{sec:reaction}
 
-Sometimes concept drift over the stream are slight, periodically, and potentially repeated. A single slight concept drift may not be able to trigger the retraining, but new knowledge should be saved into retraining buffer, so that once the model retrained with the fresh knowledge, the model should perform well when the same concept drift happens. We experiment with the FOREST dataset. There are 7 kinds of forest cover types as labels. We take the least type No.4 as anomaly while the rest 6 kinds as normal. Cover types appears alternately over the stream, so that it could be treated as slight concept drift.\\
+Sometimes concept drift over the stream are slight, periodically, and potentially repeated. A single slight concept drift may not be able to trigger the retraining, but new knowledge should be saved into retraining buffer, so that once the model retrained with the fresh knowledge, the model should perform well when the same concept drift happens. We experiment with the ForestCover dataset. There are 7 kinds of forest cover types as labels. We take the least type No.4 as anomaly while the rest 6 kinds as normal. Cover types appears alternately over the stream, so that it could be treated as slight concept drift.\\
 
-The model is trained with hidden size 45 and window length 20. In the beginning, 3000 windows are used for initialization, and 26050 windows comes as stream.  Every normal window contains more than 10 scores over threshold is treated as hard window and appended to retraining buffer. Also, every abnormal window is saved for threshold updating.  When retrain buffer size reaches 750, a retraining process will be triggered. The model retraining is triggered 3 times over stream. 
+In the beginning, 3000 windows are used for initialization, and 26050 windows comes as stream.  Every normal window contains more than 10 scores over threshold is treated as hard window and appended to retraining buffer. Also, every abnormal window is saved in anomaly buffer for threshold updating.  When normal buffer size reaches 750 and anomaly buffer is not empty, a updating process will be triggered. If there is not anomaly data avaliable, the normal buffer is maintained as a queue, where oldest windows are discarded, and latest windows are appended. The model retraining is triggered 3 times over the ForestCover stream. 
 
-\begin{figure}[ht]
+\begin{figure}[t]
 \centering
 	\begin {subfigure}[t]{0.45\textwidth}
 	\centering
